<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".FragmentChooser">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_layout_chooser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_lada_sedan"
            style="@style/AppButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_lada_sedan"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_honda_accord"
            style="@style/AppButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_honda_accord"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_audi_a7"
            style="@style/AppButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_audi_a7"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_porsche_taycan"
            style="@style/AppButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_porsche_taycan"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_tesla_model_s"
            style="@style/AppButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_tesla_model_s"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>